--- a/docker/flask/Dockerfile
+++ b/docker/flask/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.7.2
 ADD . /code
 WORKDIR /code
 RUN pip install -r dependencies.txt
-CMD ["python","main.py"]
+ENTRYPOINT ["flask","run","--host=0.0.0.0"]
