--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,25 @@
+sudo: required
+dist: xenial
+
+env:
+  DOCKER_COMPOSE_VERSION: 1.23.1
+  
 services:
   - docker
- env:
-  - DOCKER_COMPOSE_VERSION=1.4.2
+  
 before_install:
+  - docker-compose -v
   - docker -v
   # Stop the postgres instance travis sets up automatically
   - sudo /etc/init.d/postgresql stop
   - sudo service mysql stop
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-install:
-  - docker-compose up -d .
+  
+script:
+  - docker-compose up -d
+
+after_script:
+  - docker-compose stop
 branches:
   only:
     - master
