Temperature sensor script runs
Temperature sensor: Added to docker-compose, script connected to db
Postgres: automatically sets up tables
Broker: Running, just now connected to containers
pgadmin: added, may remove

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,66 @@
 version: '3'
 
 services:
+
+  temperature_sensor:
+    build: ./docker/devices/temperaturesensor/
+    environment:
+      PYTHONUNBUFFERED: 1
+      MAC_ADDRESS: '80:7D:3A:3C:57:60'
+      POSTGRES_URL: 'postgres://postgres:root@db:5432/postgres'
+      POSTGRES_PASSWORD: 'root'
+      MQTT_BROKER: '3.84.42.130'
+      MQTT_TOPIC: 'nodemcu/temp'
+
+#  weather_display:
+#    build: ./docker/devices/weatherdisplay
+#    environment:
+#      MAC_ADDRESS: '01:23:45:67:89:AB'
+#      OPENCAGE_KEY: 'aa393b66d43b473aa5cc32686cd9f706'
+#      DARKSKY_KEY: 'e27dc67e1e9ed83de174650f3d549bf6'
+#      POSTGRES_URL: 'postgres://postgres@localhost:5432/postgres'
+#      AWS_BROKER: '3.84.42.130'
+#      MQTT_TOPIC: 'nodemcu/weatherdisplay'
+
   flask:
-    build: ./docker/flask
+    build: ./docker/flask/
     ports:
       - "5000:5000"
     environment:
       PYTHONUNBUFFERED: 1
       FLASK_DEBUG: 1
       FLASK_APP: main.py
-    #  - AWS_BROKER='3.84.42.130'
-    #  - AZURE_BROKER='40.86.204.73'
+      POSTGRES_DB: postgresql://postgres@db:5432/postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
+
   db:
     image: postgres
     restart: always
     ports:
       - "5432:5432"
+    volumes:
+      - ./docker/postgres/setup.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
-      - POSTGRES_PASSWORD = root
-      - POSTGRES_DB = default
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: postgres
+
+  broker:
+    image: eclipse-mosquitto
+    restart: always
+    expose:
+      - 1883
+    ports:
+      - 1883:1883
+
+  pgadmin:
+    image: dpage/pgadmin4
+    links:
+      - db
+    depends_on:
+      - db
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: pwdpwd
+    ports:
+      - "5050:80"
