--- a/docker/devices/weatherdisplay/Dockerfile
+++ b/docker/devices/weatherdisplay/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7.2
-COPY . /code
+ADD . /code
 WORKDIR /code
 RUN pip install -r dependencies.txt
-ENTRYPOINT ["python","script.py"]
+ENTRYPOINT [ "python","script.py" ]
