--- a/docker/flask/Dockerfile
+++ b/docker/flask/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.7.2
-ADD . /code
+COPY . /code
 WORKDIR /code
 RUN pip install -r dependencies.txt
 ENTRYPOINT ["flask","run","--host=0.0.0.0"]
