--- a/docker/devices/weatherdisplay/Dockerfile
+++ b/docker/devices/weatherdisplay/Dockerfile
@@ -2,4 +2,5 @@ FROM python:3.7.2
 ADD . /code
 WORKDIR /code
 RUN pip install -r dependencies.txt
+RUN mkdir -pv /code/logs
 ENTRYPOINT [ "python","script.py" ]
